@@ -22,6 +22,7 @@ Fix undo of pasting styles.
 Fix undo of pasting comments.
 Fix crash in cell insertion/removal dialog.
 Fix the cell shift command and its cell repainting for non-contiguous selections.
+Properly update the canvas on changing sheets.
 
 Developer-Visible Only
 ----------------------
